@@ -8515,6 +8515,26 @@ part parent "m328"
 ;
 
 #------------------------------------------------------------
+# ATmega32m1
+#------------------------------------------------------------
+
+part parent "m328"
+    id              = "m32m1";
+    desc            = "ATmega32M1";
+    # stk500_devcode	= 0x;
+    # avr910_devcode	= 0x;
+    signature       = 0x1e 0x95 0x84;
+    bs2             = 0xe2;
+
+    memory "efuse"
+        read            = "0 1 0 1 0 0 0 0 0 0 0 0 1 0 0 0",
+                          "x x x x x x x x o o o o o o o o";
+        write           = "1 0 1 0 1 1 0 0 1 0 1 0 0 1 0 0",
+                          "x x x x x x x x x x i i i i i i";
+    ;
+;
+
+#------------------------------------------------------------
 # ATtiny2313
 #------------------------------------------------------------
 
